[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trailblazer"
version = "0.1.0"
description = "BVLOS pathfinding framework — Commonwealth Drone Solutions"
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "networkx>=3.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "requests>=2.28",
    "rasterio>=1.3",
    "folium>=0.15",
    "streamlit>=1.30",
    "streamlit-folium>=0.18",
    "pandas>=2.0",
    "pyogrio>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trailblazer*"]
